...
          }}
          showsHorizontalScrollIndicator={false}
        >
          <XStack gap="$2">
            {videos?.map((video) => (
              <Pressable
                testID="youtube-card"
                key={video.id}
                style={{ justifyContent: 'center', alignItems: 'center' }}
                onPress={() => handlePressVideo(video)}
              >
                <Image
                  source={{ uri: video.thumbnail }}
...
