...
      image: item?.main_picture?.medium || '',
      customId: item.customId,
    })
  }

  return (
    <Pressable testID="card-button-horizontal" onPress={handleNavigate}>
      <Card
        h={heightHorizontalCard}
        w={widthHorizontalCard}
        br="$2"
        pr="$2"
        elevation={2}
...
