...
      image: item?.main_picture?.medium || '',
      customId: item.customId,
    })
  }

  return (
    <Pressable testID="card-button-vertical" onPress={handleNavigate}>
      <Card h={heightVerticalCard} w={widthVerticalCard} elevation={2} br="$2" bg="$color1">
        <ZStack f={1} ov="hidden">
          <Image
            style={{
              height: '100%',
              width: widthVerticalCard,
...
