...
      <Stack gap="$4">
        <XStack jc="space-between" ai="center">
          <Text fow="$6">{t('settings.theme')}</Text>
          <Switch
            checked={isCheckedTheme}
            onCheckedChange={onCheckedThemeChange}
            testID="switch-theme"
          >
            <Switch.Thumb>
              {isCheckedTheme ? <Moon size="$1" col="$blue10" /> : <Sun size="$1" col="$yellow8" />}
            </Switch.Thumb>
          </Switch>
        </XStack>
        <Separator />
        <XStack jc="space-between" ai="center">
          <Text fow="$6">{t('settings.language')}</Text>
          <Switch
            checked={isCheckedLanguage}
            onCheckedChange={onCheckedLanguageChange}
            testID="switch-language"
          >
            <Switch.Thumb ai="center" jc="center">
              {isCheckedLanguage ? (
                <Brazil height={10} width={15} />
              ) : (
                <Usa height={10} width={15} />
...
